// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`foo.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/*
 * @providesModule Foo
 */

=====================================output=====================================
/*
 * @providesModule Foo
 */

================================================================================
`;

exports[`test.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @flow
 */

require('Foo');

=====================================output=====================================
/**
 * @flow
 */

require("Foo");

================================================================================
`;
